[package]

name = "piston2d-graphics"
version = "0.0.35"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "leonkunert <info@leonkunert.de>",
    "gmorenz",
    "Potpourri",
    "TyOverby <ty@pre-alpha.com>"]
keywords = ["graphics", "2d", "game", "piston", "triangulation"]
description = "A library for 2D graphics that works with multiple back-ends"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/graphics.git"
homepage = "https://github.com/pistondevelopers/graphics"

[lib]

name = "graphics"
path = "./src/lib.rs"

# [dependencies.piston-viewport]
# git = "https://github.com/PistonDevelopers/viewport"

# [dependencies.vecmath]
# git = "https://github.com/PistonDevelopers/vecmath"

# [dependencies.draw_state]
# git = "https://github.com/gfx-rs/draw_state"

# [dependencies.piston-texture]
# git = "https://github.com/PistonDevelopers/texture"

# [dependencies.interpolation]
# git = "https://github.com/PistonDevelopers/interpolation"

# [dependencies.read_color]
# git = "https://github.com/PistonDevelopers/read_color"

[dependencies]
draw_state = "0.0.7"
interpolation = "0.0.6"
num = "0.1"
piston-texture = "0.0.1"
piston-viewport = "0.0.3"
read_color = "0.0.2"
vecmath = "0.0.23"
