[package]

name = "piston2d-graphics"
version = "0.13.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "leonkunert <info@leonkunert.de>",
    "gmorenz",
    "Potpourri",
    "TyOverby <ty@pre-alpha.com>"]
keywords = ["graphics", "2d", "game", "piston", "triangulation"]
description = "A library for 2D graphics that works with multiple back-ends"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/graphics.git"
homepage = "https://github.com/pistondevelopers/graphics"

[lib]

name = "graphics"
path = "./src/lib.rs"

[dependencies]
draw_state = "0.2.0"
interpolation = "0.1.0"
piston-texture = "0.3.0"
piston-viewport = "0.2.0"
read_color = "0.1.0"
vecmath = "0.2.0"
