[package]

name = "piston2d-graphics"
version = "0.36.0"
authors = [
    "bvssvni <bvssvni@gmail.com>",
    "Coeuvre <coeuvre@gmail.com>",
    "leonkunert <info@leonkunert.de>",
    "gmorenz",
    "Potpourri",
    "TyOverby <ty@pre-alpha.com>"]
keywords = ["graphics", "2d", "game", "piston", "triangulation"]
description = "A library for 2D graphics that works with multiple back-ends"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pistondevelopers/graphics.git"
homepage = "https://github.com/pistondevelopers/graphics"
categories = ["rendering::graphics-api"]
exclude = ["scripts", "Cargo.png"]

[lib]

name = "graphics"
path = "./src/lib.rs"

[dependencies]
interpolation = "0.2.0"
piston-texture = "0.8.0"
piston-viewport = "1.0.0"
read_color = "1.0.0"
vecmath = "1.0.0"

[dependencies.rusttype]
version = "0.8.0"
optional = true

[dependencies.fnv]
version = "1.0.5"
optional = true

[features]
default = []

glyph_cache_rusttype = ["rusttype", "fnv"]
